# Xbox-Content-Installer

./: CMakeLists.txt  LICENSE  README.md
include/xbox/cli/: cli_parser.hpp  commands.hpp  progress.hpp
include/xbox/concurrency/: thread_pool.hpp
include/xbox/core/: endian.hpp  errors.hpp  logger.hpp  result.hpp  types.hpp
include/xbox/crypto/: hash_verify.hpp  sha1.hpp
include/xbox/installer/: conflict_policy.hpp  installer.hpp  path_resolver.hpp
include/xbox/io/: buffered_writer.hpp  file_io.hpp  memory_map.hpp  zip_reader.hpp
include/xbox/stfs/: stfs_extractor.hpp  stfs_file.hpp  stfs_hash.hpp  stfs_header.hpp  stfs_metadata.hpp  stfs_reader.hpp  stfs_volume.hpp  svod_container.hpp
include/xbox/utils/: path_utils.hpp  string_utils.hpp
resources/: app.manifest  unblock.bat  version.rc
samples/: make_test_stfs.cpp
scripts/: build.sh
src/: main.cpp
src/cli/: cli_parser.cpp  commands.cpp  progress.cpp
src/concurrency/: thread_pool.cpp
src/core/: endian.cpp  errors.cpp  logger.cpp
src/crypto/: sha1.cpp
src/installer/: conflict_policy.cpp  installer.cpp  path_resolver.cpp
src/io/: buffered_writer.cpp  file_io.cpp  memory_map.cpp  zip_reader.cpp
src/stfs/: stfs_extractor.cpp  stfs_file.cpp  stfs_hash.cpp  stfs_header.cpp  stfs_metadata.cpp  stfs_reader.cpp  stfs_volume.cpp  svod_container.cpp
src/utils/: path_utils.cpp  string_utils.cpp
src/xiso/: xiso_reader.cpp
tests/: test_endianness.cpp  test_framework.hpp  test_main.cpp  test_sha1.cpp  test_stfs_header.cpp  test_stfs_path_resolver.cpp  test_string_utils.cpp  test_svod.cpp  test_thread_pool.cpp  test_volume_descriptor.cpp
